** Release Notes

1.4.80
  * added --outDiskCount to pathena and prun

1.4.79
  * added --notExpandSecDSs to prun

1.4.78
  * added --maxLoopCount to phpo

1.4.77
  * removed --useLocalIO from job params

1.4.76
  * changed --architecture to follow https://its.cern.ch/jira/browse/CRIC-173

1.4.75
  * added --noSeparateLog to prun

1.4.74
  * fixed the 1.4.73 change

1.4.73
  * added recover_lost_files in pbook

1.4.72
  * added --parentTaskID

1.4.71
  * protection against wrong types in --loadJson

1.4.70
  * changed %RNDM to be reproducible in retries

1.4.69
  * added --mergeLog to pathena/prun
  * added manage to iDDS API

1.4.68
  * fixed --lowMinDS

1.4.65
  * to allow master, latest, and timestamp in --athenaTag

1.4.64
  * not to enforce directIO when --trf in pathena

1.4.63
  * changed definition of --maxPoints and --maxEvaluationJobs to be per segment

1.4.61
  * added PANDA_USE_NATIVE_HTTPLIB

1.4.57
  * added GUI example

1.4.56
  * added --dumpTaskParams to prun

1.4.53
  * to escape double quotes in passphrase

1.4.49
  * added --respectLB to pathena/prun

1.4.48
  * added Jupyter Lab support

1.4.47
  * fixed side effect in 1.4.46

1.4.46
  * fixed for AtlasStats

1.4.45
  * fixed OIDC stuff for python3

1.4.43
  * disabled host cert check in device code flow

1.4.42
  * for OIDC with Indigo IAM

1.4.41
  * added --notExpandaInDS to pathena/prun
  * introduced PANDAMON_URL

1.4.40
  * added OIDC support
  
1.4.39
  * to ignore --rootVer when --useAthenaPackage/athenaTag

1.4.38
  * fixed --rootVer + --useAthenaPackage

1.4.37
  * protection against unknown athenaTag

1.4.36
  * added --avoidVP

1.4.35
  * --cmtConfig = --architecture

1.4.34
  * using ALRB for container execution in prun by default

1.4.33
  * set --noBuild in pathena when --containerImage is used
  * fixed --trf + --noOutput in pathena

1.4.32
  * added --architecture

1.4.31
  * protection against long site parameter in phpo
  * added --checkPointInterval to phpo

1.4.30